# haskell_starter_pack

./: .gitignore  husk.cabal
benchmark/: Bench.hs
executable/: Main.hs
test-suite/: HuskSpec.hs
