name: husk
version: 0.0.0
build-type: Simple
cabal-version: >= 1.18

library
    exposed-modules: Husk
    hs-source-dirs: library
    build-depends: base
    default-language: Haskell2010

executable husk
    build-depends: base, husk
    default-language: Haskell2010
    hs-source-dirs: executable
    main-is: Main.hs

test-suite hspec
    build-depends: base, husk, hspec == 1.9.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite hlint
    build-depends: base, hlint == 1.8.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    main-is: HLint.hs
    type: exitcode-stdio-1.0

benchmark criterion
    build-depends: base, husk, criterion == 0.6.*
    default-language: Haskell2010
    hs-source-dirs: benchmark
    main-is: Bench.hs
    type: exitcode-stdio-1.0
